@@ -8,6 +8,7 @@ CHANGELOG Roundcube Webmail
 - Managesieve: Support 'duplicate' extension [RFC 7352]
 - Managesieve: Unhide advanced rule controls if there are inputs with errors
 - Managesieve: Display warning message when filter form contains errors
+- Fix bug where errors could have been not logged when per_user_logging=true
 
 RELEASE 1.2.0
 -------------
